[package]
name = "bilive_danmu_core"
version = "0.1.0"
edition = "2024"


[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
anyhow = "1.0.95"
reqwest = { version = "0.12.11", features = ["blocking", "json", "rustls-tls"] }
urlencoding = "2.1.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
# 
cryptocol = "0.8.5"
sha2 = "0.10.8"
hmac = "0.12.1"
uuid = { version = "*", features = ["serde", "v4"] }
# 
reqwest-websocket = "0.4.4"
# ws = { version = "*" }
# tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
# 
thiserror = "2.0.9"
flate2 = { version = "1.0.28", features = ["zlib"] }
futures = "0.3.31"
regex = "1"
